# fantacon-2d

./: .gitignore
engine/: .gitignore  CMakeLists.txt  Makefile  README.md
engine/.claude/: settings.local.json
engine/docs/: GameObject_Design.md  ResourceManager_Design.md
engine/examples/: character_layer_demo.cpp  color_pulse_scroller_demo.cpp  convert_c64_font.cpp  fire_demo.cpp  font_converter.cpp  font_debug.cpp  font_demo.cpp  font_viewer.cpp  gameobject_demo.cpp  generate_test_font.cpp  indexed_palette_demo.cpp  layer_transparency_demo.cpp  ldtk_demo.cpp  main.cpp  mesh_demo.cpp  mesh_with_normals_demo.cpp  sine_scroller_demo.cpp  test_normals.cpp  text_grid_demo.cpp  vector_lines_demo.cpp  vulkan_test.cpp
engine/examples/resources/: generate_test_font.py  testmap.ldtk
engine/include/engine/: AttributedTextGrid.h  CharacterLayer.h  Engine.h  FPSCounter.h  Font.h  GLRenderer.h  GameObject.h  ICollidable.h  IInputHandler.h  ILayerAttachable.h  IOnDebug.h  IRenderable.h  IRenderer.h  IUpdateable.h  IndexedPixelBuffer.h  Input.h  Layer.h  Logger.h  Mesh3D.h  Palette.h  PixelBuffer.h  PixelFont.h  Renderer.h  ResourceManager.h  SDLRenderer.h  Sprite.h  Text.h  Texture.h  Tilemap.h  Types.h  VulkanRenderer.h
engine/shaders/: sprite.frag  sprite.vert  sprite_frag.spv  sprite_vert.spv
engine/src/: AttributedTextGrid.cpp  CharacterLayer.cpp  Engine.cpp  FPSCounter.cpp  Font.cpp  GLRenderer.cpp  GameObject.cpp  IndexedPixelBuffer.cpp  Input.cpp  Layer.cpp  Mesh3D.cpp  Palette.cpp  PixelBuffer.cpp  PixelFont.cpp  ResourceManager.cpp  SDLRenderer.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Tilemap.cpp  VulkanRenderer.cpp
